[gd_scene load_steps=17 format=3 uid="uid://kn0cyyo34r6v"]

[ext_resource type="Script" path="res://scripts/playermovement.gd" id="1_i2a3l"]
[ext_resource type="AnimationLibrary" uid="uid://dtmbvectv4vvc" path="res://assets/animations/backarmanimations.res" id="2_0sh0e"]
[ext_resource type="Texture2D" uid="uid://bg8h1wnl1fjyh" path="res://assets/character/AngleReference.png" id="2_dcgry"]
[ext_resource type="Script" path="res://scripts/SpriteAnimator.gd" id="3_2c66w"]
[ext_resource type="Texture2D" uid="uid://5s3efhbv6yoi" path="res://assets/character/HumanHeadCombined.png" id="3_noeje"]
[ext_resource type="Texture2D" uid="uid://bkc55gbdyd37x" path="res://assets/character/HumanBackArmCombined.png" id="4_fk1ah"]
[ext_resource type="Texture2D" uid="uid://opakgi61ej0w" path="res://assets/character/HumanBodyCombined.png" id="5_h1ohj"]
[ext_resource type="Texture2D" uid="uid://bv31mhy8ox3np" path="res://assets/character/HumanFrontArmCombined.png" id="6_urt3x"]
[ext_resource type="AnimationLibrary" uid="uid://batughvjkhr3q" path="res://assets/animations/headanimations.res" id="6_wtvw5"]
[ext_resource type="Texture2D" uid="uid://bxr0yywl3f2rk" path="res://assets/character/HumanLegsCombined.png" id="7_c31yv"]
[ext_resource type="AnimationLibrary" uid="uid://b4sgs0eo17ef6" path="res://assets/animations/bodyanimations.res" id="9_yba1c"]
[ext_resource type="AnimationLibrary" uid="uid://cirf7nrrbunrx" path="res://assets/animations/frontarmanimations.res" id="11_8i66a"]
[ext_resource type="AnimationLibrary" uid="uid://cradvce2uqbvu" path="res://assets/animations/legsanimations.res" id="13_5juc2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4hsne"]

[sub_resource type="LabelSettings" id="LabelSettings_cbyhx"]
font_size = 11

[sub_resource type="LabelSettings" id="LabelSettings_coiea"]
font_size = 11

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_i2a3l")
SPEED = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 13)
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_4hsne")

[node name="BaseSprite" type="Sprite2D" parent="."]
z_as_relative = false
texture_filter = 1
texture_repeat = 1
hframes = 6
vframes = 6
frame = 32
script = ExtResource("3_2c66w")

[node name="Head" type="Sprite2D" parent="BaseSprite"]
texture = ExtResource("3_noeje")
offset = Vector2(0, 1)
hframes = 6
vframes = 10
frame = 42

[node name="HeadAnimationPlayer" type="AnimationPlayer" parent="BaseSprite/Head"]
libraries = {
"headanimations": ExtResource("6_wtvw5")
}

[node name="BackArm" type="Sprite2D" parent="BaseSprite"]
texture = ExtResource("4_fk1ah")
offset = Vector2(0, 1)
hframes = 6
vframes = 10
frame = 54

[node name="BackArmAnimationPlayer" type="AnimationPlayer" parent="BaseSprite/BackArm"]
libraries = {
"backarmanimations": ExtResource("2_0sh0e")
}

[node name="Legs" type="Sprite2D" parent="BaseSprite"]
texture = ExtResource("7_c31yv")
offset = Vector2(0, 1)
hframes = 6
vframes = 10
frame = 23

[node name="LegsAnimationPlayer" type="AnimationPlayer" parent="BaseSprite/Legs"]
libraries = {
"legsanimations": ExtResource("13_5juc2")
}

[node name="Body" type="Sprite2D" parent="BaseSprite"]
texture = ExtResource("5_h1ohj")
offset = Vector2(0, 1)
hframes = 6
vframes = 10
frame = 47

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="BaseSprite/Body"]
libraries = {
"bodyanimations": ExtResource("9_yba1c")
}

[node name="FrontArm" type="Sprite2D" parent="BaseSprite"]
texture = ExtResource("6_urt3x")
offset = Vector2(0, 1)
hframes = 6
vframes = 10
frame = 23

[node name="FrontArmAnimationPlayer" type="AnimationPlayer" parent="BaseSprite/FrontArm"]
libraries = {
"frontarmanimations": ExtResource("11_8i66a")
}

[node name="reference" type="Sprite2D" parent="BaseSprite"]
visible = false
texture_filter = 2
texture = ExtResource("2_dcgry")

[node name="Camera2D" type="Camera2D" parent="."]
texture_filter = 2
zoom = Vector2(2, 2)

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = -16.0
offset_top = -31.0
offset_right = 24.0
offset_bottom = -8.0
text = "Player"
label_settings = SubResource("LabelSettings_cbyhx")

[node name="Debug" type="Label" parent="."]
texture_filter = 1
offset_left = -19.0
offset_top = 14.0
offset_right = 21.0
offset_bottom = 37.0
text = "!"
label_settings = SubResource("LabelSettings_coiea")
horizontal_alignment = 1
